<?xml version="1.0"?>
<package format="2">
  <name>my_robot</name>
  <version>1.0.0</version>
  <description>
    This package is for my robot
  </description>
  <maintainer email="zhaoguangbao_8421@163.com">zhaoguangbao</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>my_robot_description</exec_depend>
  <exec_depend>double_my_robot_moveit_config</exec_depend>

  <export>
   <metapackage />
  </export>
</package>
